# seqBackup

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml  test.yml
scripts/: backup_illumina.py
seqBackupLib/: backup.py  illumina.py
test/: #test_backup.py#  .#test_backup.py  conftest.py  test_backup.py  test_illumina.py
test/170323_M04734_0028_000000000-B2MVT/: test_sample_sheet.txt
test/170323_M04734_0028_000000000-B2MVT_L001/: 170323_M04734_0028_000000000-B2MVT_L001.md5
