[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqBackup"
description = "Set of rules to organize our fastq storage on the server."
authors = [{name = "Ceylan Tanes", email = "ctanes@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/PennChopMicrobiomeProgram"

[project.scripts]
backup_illumina = "seqBackupLib.backup:main"
verify_backup = "seqBackupLib.backup:verify_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seqBackupLib"]

[tool.setuptools.dynamic]
version = {attr = "seqBackupLib.version.__version__"}
